--- a/src/assets/css/estilos.css
+++ b/src/assets/css/estilos.css
@@ -7,6 +7,7 @@
 }
 
 .centralizado {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -120,7 +121,7 @@
     justify-content: center;
     align-items: center;
 
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.2);
     border-radius: 3px 3px 0px 0px;
