--- a/src/assets/css/estilos.css
+++ b/src/assets/css/estilos.css
@@ -190,6 +190,15 @@
     justify-content: center;
 }
 
+.opcoes > div:hover{
+    filter: opacity(0.7);
+    cursor: pointer;
+}
+
+.opcoes > div:active{
+    transform: translateY(4px);
+}
+
 .vermelho {
     background-color: #FF3030;
 }
